# jpdb-rs

./: .gitlab-ci.yml  CHECKLIST.md  Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  request.rs
src/tests/: mod.rs  tests_common.rs
tests/: real.rs
